// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topicGroupUtils getTopicGroups generates topic group config based on groupsConfig 1`] = `
Array [
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": true,
      "hasFeatureColumn": false,
      "id": "Some-Group1_0",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Group1",
    "items": Array [
      Object {
        "derivedFields": Object {
          "displayName": "/tf",
          "id": "Some-Group1_0_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/tf",
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": false,
      "hasFeatureColumn": false,
      "id": "Some-Group2_1",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Group2",
    "items": Array [
      Object {
        "derivedFields": Object {
          "displayName": "/some_topic1",
          "id": "Some-Group2_1_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/some_topic1",
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
]
`;

exports[`topicGroupUtils getTopicGroups generates topic group config for multiple data sources (bags + tables + labels) 1`] = `
Array [
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": true,
      "hasFeatureColumn": false,
      "id": "My-Topic-Group_0",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "My Topic Group",
    "expanded": true,
    "items": Array [
      Object {
        "derivedFields": Object {
          "datatype": "tf2_msgs/TFMessage",
          "displayName": "/tf",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": true,
            },
          ],
          "id": "My-Topic-Group_0_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "expanded": true,
        "selectedNamespacesByColumn": Array [
          Array [
            "some_tf_ns1",
          ],
          Array [
            "some_tf_ns1",
            "some_tf_ns2",
          ],
        ],
        "topicName": "/tf",
        "visibilityByColumn": Array [
          true,
          false,
        ],
      },
      Object {
        "derivedFields": Object {
          "displayName": "Map",
          "id": "My-Topic-Group_0_1",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "displayName": "Map",
        "topicName": "/metadata",
        "visibilityByColumn": Array [
          true,
          false,
        ],
      },
      Object {
        "derivedFields": Object {
          "displayName": "/some_topic_1",
          "id": "My-Topic-Group_0_2",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/some_topic_1",
        "visibilityByColumn": Array [
          true,
          true,
        ],
      },
      Object {
        "derivedFields": Object {
          "displayName": "/labels_json/some_label_topic_1",
          "id": "My-Topic-Group_0_3",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/labels_json_2",
          ],
        },
        "topicName": "/labels_json/some_label_topic_1",
      },
      Object {
        "derivedFields": Object {
          "availableNamespacesByColumn": Array [
            Array [
              "some_topic_2_ns1",
              "some_topic_2_ns2",
            ],
          ],
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "/some_topic_2",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "id": "My-Topic-Group_0_4",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
          "sortedNamespaceDisplayVisibilityByColumn": Array [
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": true,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "some_topic_2_ns1",
            },
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": false,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "some_topic_2_ns2",
            },
          ],
        },
        "expanded": true,
        "selectedNamespacesByColumn": Array [
          Array [
            "some_topic_2_ns1",
          ],
          Array [
            "some_topic_2_ns1",
            "some_topic_2_ns2",
          ],
        ],
        "settingsByColumn": Array [
          Object {
            "overrideColor": "128, 0, 0, 1",
            "overrideCommand": "LinedConvexHull",
          },
          Object {
            "overrideColor": "0, 128, 0, 1",
            "overrideCommand": "LinedConvexHull",
          },
        ],
        "topicName": "/some_topic_2",
        "visibilityByColumn": Array [
          false,
          true,
        ],
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": true,
      "hasFeatureColumn": false,
      "id": "Some-Topic-Group-1_1",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Topic Group 1",
    "expanded": true,
    "items": Array [
      Object {
        "derivedFields": Object {
          "datatype": "tf2_msgs/TFMessage",
          "displayName": "/tf",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "id": "Some-Topic-Group-1_1_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/tf",
      },
      Object {
        "derivedFields": Object {
          "availableNamespacesByColumn": Array [
            Array [
              "some_topic_2_ns1",
              "some_topic_2_ns2",
            ],
          ],
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "/some_topic_2",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "id": "Some-Topic-Group-1_1_1",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
          "sortedNamespaceDisplayVisibilityByColumn": Array [
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": true,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "some_topic_2_ns1",
            },
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": true,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "some_topic_2_ns2",
            },
          ],
        },
        "expanded": true,
        "topicName": "/some_topic_2",
      },
      Object {
        "derivedFields": Object {
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "/tables/some_topic",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "T1",
              "isParentVisible": false,
              "visible": true,
            },
          ],
          "id": "Some-Topic-Group-1_1_2",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_tables_2",
          ],
        },
        "settingsByColumn": Array [
          undefined,
          Object {
            "overrideColor": "0, 0, 255, 0.5",
            "overrideCommand": "LinedConvexHull",
          },
        ],
        "topicName": "/tables/some_topic",
        "visibilityByColumn": Array [
          true,
          true,
        ],
      },
      Object {
        "derivedFields": Object {
          "displayName": "/tables/some_topic_with_ns",
          "id": "Some-Topic-Group-1_1_3",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_tables_2",
          ],
        },
        "expanded": true,
        "topicName": "/tables/some_topic_with_ns",
        "visibilityByColumn": Array [
          true,
          true,
        ],
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
]
`;

exports[`topicGroupUtils getTopicGroups generates topic group config for two bags 1`] = `
Array [
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": true,
      "hasFeatureColumn": true,
      "id": "Some-Group_0",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Group",
    "items": Array [
      Object {
        "derivedFields": Object {
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "/some_topic1",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
            Object {
              "available": true,
              "badgeText": "B2",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "id": "Some-Group_0_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/some_topic1",
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
]
`;

exports[`topicGroupUtils getTopicGroups updates the groups based on available topics, namespaces, displayNames and errors 1`] = `
Array [
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": true,
      "hasFeatureColumn": true,
      "id": "Some-Group1_0",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Group1",
    "items": Array [
      Object {
        "derivedFields": Object {
          "availableNamespacesByColumn": Array [
            Array [
              "tf_ns1",
              "tf_ns2",
            ],
          ],
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "Transforms",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "id": "Some-Group1_0_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
          "sortedNamespaceDisplayVisibilityByColumn": Array [
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": true,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "tf_ns1",
            },
            Object {
              "displayVisibilityByColumn": Array [
                Object {
                  "available": true,
                  "badgeText": "B1",
                  "isParentVisible": false,
                  "visible": true,
                },
              ],
              "keyboardFocusIndex": -1,
              "namespace": "tf_ns2",
            },
          ],
        },
        "topicName": "/tf",
      },
      Object {
        "derivedFields": Object {
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "/some_topic2",
          "displayVisibilityByColumn": Array [
            undefined,
            Object {
              "available": true,
              "badgeText": "B2",
              "isParentVisible": false,
              "visible": false,
            },
          ],
          "errors": Array [
            "(/webviz_bag_2) missing frame id",
          ],
          "id": "Some-Group1_0_1",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/some_topic2",
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
  Object {
    "derivedFields": Object {
      "addTopicKeyboardFocusIndex": -1,
      "expanded": false,
      "hasFeatureColumn": true,
      "id": "Some-Group2_1",
      "isShownInList": true,
      "keyboardFocusIndex": -1,
      "prefixesByColumn": Array [
        Array [
          "",
          "/webviz_tables",
          "/labels_json",
        ],
        Array [
          "/webviz_bag_2",
          "/webviz_tables_2",
        ],
      ],
    },
    "displayName": "Some Group2",
    "items": Array [
      Object {
        "derivedFields": Object {
          "datatype": "visualization_msgs/MarkerArray",
          "displayName": "Some Topic 1",
          "displayVisibilityByColumn": Array [
            Object {
              "available": true,
              "badgeText": "B1",
              "isParentVisible": false,
              "visible": false,
            },
            undefined,
          ],
          "errors": Array [
            "missing transforms to my_root_frame",
          ],
          "id": "Some-Group2_1_0",
          "isShownInList": true,
          "keyboardFocusIndex": -1,
          "prefixByColumn": Array [
            "",
            "/webviz_bag_2",
          ],
        },
        "topicName": "/some_topic1",
      },
    ],
    "visibilityByColumn": Array [
      false,
      false,
    ],
  },
]
`;
